[gd_scene load_steps=29 format=2]

[ext_resource path="res://Assets/golem.png" type="Texture" id=1]
[ext_resource path="res://StateMachine/StateMachine.gd" type="Script" id=2]
[ext_resource path="res://StateMachine/Golem_Attack.gd" type="Script" id=3]
[ext_resource path="res://Enemies/Golem.gd" type="Script" id=4]
[ext_resource path="res://StateMachine/Golem_Die.gd" type="Script" id=5]
[ext_resource path="res://StateMachine/Golem_Move.gd" type="Script" id=6]
[ext_resource path="res://Assets/Golem_Die.png" type="Texture" id=7]
[ext_resource path="res://Player/Hurt.tres" type="Animation" id=8]
[ext_resource path="res://Assets/Golem_Attack.png" type="Texture" id=9]
[ext_resource path="res://Assets/Golem_Attack.mp3" type="AudioStream" id=10]
[ext_resource path="res://Assets/Golem_Dead.mp3" type="AudioStream" id=11]

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 50, 60 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 50, 0, 50, 60 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 100, 0, 50, 60 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 150, 0, 50, 60 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 50, 60 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 50, 0, 50, 60 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 100, 0, 50, 60 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 150, 0, 50, 60 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 200, 0, 50, 60 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 250, 0, 50, 60 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 50, 60 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 50, 0, 50, 60 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 100, 0, 50, 60 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 150, 0, 50, 60 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ) ],
"loop": false,
"name": "Attack",
"speed": 4.0
}, {
"frames": [ SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ) ],
"loop": false,
"name": "Die",
"speed": 5.0
}, {
"frames": [ SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ) ],
"loop": true,
"name": "Move",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 19.5, 28.5 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 19.5, 30 )

[node name="Golem" type="KinematicBody2D" groups=["enemy"]]
scale = Vector2( 2, 2 )
script = ExtResource( 4 )
walking = 300

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 7 )
animation = "Move"
frame = 1
playing = true

[node name="Effect" type="AnimationPlayer" parent="AnimatedSprite"]
anims/Hurt = ExtResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.5, 1.5 )
shape = SubResource( 8 )

[node name="Attack" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 28, 0 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 2 )

[node name="Attack" type="Node" parent="StateMachine"]
script = ExtResource( 3 )

[node name="Timer" type="Timer" parent="StateMachine/Attack"]
wait_time = 0.8

[node name="Die" type="Node" parent="StateMachine"]
script = ExtResource( 5 )

[node name="Move" type="Node" parent="StateMachine"]
script = ExtResource( 6 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -0.5, 0 )
shape = SubResource( 9 )

[node name="Dead" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 11 )
pitch_scale = 0.9

[node name="Attack2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 10 )
pitch_scale = 0.9

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="StateMachine/Attack/Timer" to="StateMachine/Attack" method="_on_Timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
